tests/error/linear_errors/branch_use.err
Error: Drop violation (at $FILE:24:4)
   | 
22 | @guppy(module)
23 | def foo(b: bool) -> bool:
24 |     q = new_qubit()
   |     ^ Variable `q` with non-droppable type `qubit` may be leaked
   |       ...
   | 
25 |     if b:
   |        - if this expression is `False`

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
